# SubsetSum

./: CMakeLists.txt  README.md
samples/: 14_12bit.txt  16_13bit.txt  20_18bit.txt  36_31bit.txt  36_mixed.txt  40_117bit.txt  42_37bit.txt  42_37bit_n.txt  48_45bit.txt  48_mixed4.txt  50_47bit.txt  54_mixed3.txt  55_51bit.txt  60_52bit.txt  60_mixed1.txt  60_mixed2.txt  60_mixed3.txt  60_mixed4.txt  64_60bit.txt  66_60bit.txt  70_63bit.txt
src/: CMakeLists.txt  Controllers.cpp  Controllers.h  HashKernel.cl  HashKernelBHGroups.cl  HashKernelBigHash.cl  HashKernelGroups.cl  HashWorkers.cpp  HashWorkers.h  Int128.cpp  Int128.h  Naive64BitKernel.cl  NaiveKernel.cl  NaiveMethodSSE2.cpp  NaiveMethodSSE4.cpp  NaiveWorkers.cpp  NaiveWorkers.h  NodeHashGen.cpp  NodeHashGen.h  PushPop.cpp  PushPop.h  Queue.cpp  Queue.h  Util.cpp  Util.h  X86CpuId.cpp  X86CpuId.h  main.cpp
src/tests/: CMakeLists.txt  HashWorkGenNHTest.cpp  NodeHashGenPerf.cpp  OrderRangesTest.cpp  SmallestRegionTest.cpp
